@@ -1,3 +1,10 @@
+2010-11-17  Nick Clifton  <nickc@redhat.com>
+
+	* input-file.c (input_file_open): Check for empty input files.
+	(input_file_get): Check for end of file before reading any more
+	data.
+	(input_file_give_next_buffer): Likewise.
+
 2010-11-18  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	PR gas/12181
